--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3",
+    "react-toastify": "^10.0.4",
     "sweetalert2": "^11.7.20",
     "web-vitals": "^2.1.4"
   },
